--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "graphql": "^15.3.0",
     "lodash.merge": "^4.6.2",
     "mongodb": "^3.5.9",
-    "stripe": "^8.100.0"
+    "stripe": "^8.100.0",
+    "pg": "^8.3.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.28"
   }
 }
